# mmqlc

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: compile_winux.yml
Detailed Documentation/: PLANS.md
DetailedDocs/: MMQLC_USE.md  PLANS.md
DetailedDocumentation/: CHANGELOG.md  QUERIES_COMPLEX_NUMBERS.md  QUERIES_REAL_NUMBERS.md  VARIABLES.md
src/: CMakeLists.txt  main.cpp
src/cli/: CLInterface.cpp  CLInterface.hpp
src/core/: Core.cpp  Core.hpp
src/core/helpers/: boost_fwd.hpp  combinatorics.hpp  constants.hpp  functions.hpp  trigonometry.hpp
src/grammar/: Grammar.hpp
src/headers/: mmqlc.ui.hpp
src/lexer/: Lexer.hpp
src/parser/: Parser.cpp  Parser.hpp
src/vresolver/: VResolver.hpp
